css/theme.css
body {

    font-family: Menlo, "Courier New", monospace;
    margin: auto;
    width: 75%;
    min-width: 800px;

    color: #d4d4d4;
    background-color: #1e1e1e;

}

p {

    word-wrap: normal;
    width: 800px;

}

h1, h2, h3, h4, h5 {

    font-weight: bolder;
    /*color: #C586C0;*/
    color: #DCDCAA;

}

.comment {

	font-family: Menlo, "Courier New", monospace;
	color: #6A9955;

}

#template {

	overflow: auto;

}

.contact {

	margin: 0px 0px 0px 0px;
	padding: 10px 0px 20px 0px;

}

.class {

	margin: 0px 10px 0px 0px;
	padding: 10px 0px 20px 0px;
	float: right;

}

.menu {

	clear: right;

}

a {

	color: #569CD6;

}

a:hover {

	color: #CE9178;

}

.schedule { 
    padding-top; 0px;
    padding-bottom : 0px;
    margin-bottom: 0px;
    margin-left: 0px;
}

.schedule p {
   padding-top: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
}

.schedule span { 
    display : inline-block;
    vertical-align: top;
    padding-top: 4px;
    padding-bottom : 1px;
    margin-bottom: 0px;
}

.class_number {

    width:12ch;

}

.title {

    width: 30ch;

}

.days {

    width: 5ch;

}

.time {

    text-align: right;
    width: 14ch;

}

.location {

    width: 14ch;

}

